# tispetta

./: .env.example  .gitignore  Makefile  README.md  SESSION_CHANGES.md  benefits_opportunity_engine_plan.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
services/api/: Dockerfile  README.md  alembic.ini  benefits_engine.db  pyproject.toml  railway.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260312_0001_initial.py  20260312_0001_initial_placeholder.py
services/api/app/: __init__.py  bootstrap_cli.py  bootstrap_manifest.py  main.py  models.py  predeploy.py
services/api/app/api/: deps.py  router.py
services/api/app/core/: config.py  security.py
services/api/app/db/: init_db.py  migrations.py  session.py
services/api/app/matching/: rules.py  service.py
services/api/app/schemas/: __init__.py  auth.py  common.py  corpus.py  notification.py  opportunity.py  profile.py  review.py  source.py
services/api/app/seeds/: catalog.py  cli.py
services/api/app/services/: admin.py  auth.py  corpus.py  family_opportunities.py  notifications.py  opportunities.py  opportunity_scope.py  profile.py
services/api/app/tests/: test_api_smoke.py  test_migrations.py  test_notifications.py  test_rules.py
services/worker/: Dockerfile  pyproject.toml  railway.toml
services/worker/tests/: test_bootstrap.py
services/worker/worker/: bootstrap_cli.py  config.py  main.py
services/worker/worker/clients/: storage.py
services/worker/worker/jobs/: pipeline.py
services/worker/worker/services/: bootstrap.py  (+1 more)
(+99 files in other folders)
